--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="instagram_app_id">1079924572594402</string>
     <string name="instagram_app_secret_key">a3f31b213283bf291160e3a1a0efb24e</string>
     <string name="instagram_app_redirect_uri">https://socialmediapublisher.github.io/</string>
-    <string name="reason_1">Group Study</string>
+    <string name="reason_1">Study</string>
     <string name="reason_2">Presentation</string>
     <string name="reason_3">Exposition</string>
 
